swen430as2/test_files/valid/casts/Cast_Valid_02.while
int f(int i) {
    return i;
}

void main() {
    int|null x = 1;
    int y = (int) x;
    assert f(y) == 1;
}
