swen430as2/test_files/invalid/null/Null_Invalid_4-TC01.while
null[] f(null[] xs, int i, int v) {
       xs[i] = v;
       return xs;
}